Fixing spacing on fiction

--- a/fiction/fictionstyle2.css
+++ b/fiction/fictionstyle2.css
@@ -1,7 +1,7 @@
 .grid {
     display: grid;
    grid-template: repeat(6, 200px) / 275px 275px 685px;
-    margin-left: 275px;
+    margin-left: 400px;
     margin-right: auto;
     max-width: 50%;
     margin-bottom: 100px;
